# Stencil-Fork

StencilBenchmark/: .gitignore  CHANGELOG_13march26.md  CHANGELOG_14april26.md  CHANGELOG_17april26.md  CHANGELOG_17april26_2.md  CHANGELOG_30march26.md  CMakeLists.txt  README.md  build_to_debug.bash  build_to_debug.bat  increase_image_for_graphics.bash
StencilBenchmark/include/: BMP_Reader.h  Class_Image.h  Class_Kernel.h  Functions.h
StencilBenchmark/samples/: CMakeLists.txt  sample.cpp
StencilBenchmark/src/: BMP_Reader.cpp  CMakeLists.txt  Class_Image.cpp  Class_Kernel.cpp  Functions.cpp
